welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:5: error: missing arguments for method abs in package math;
follow this method with `_' if you want to treat it as a partially applied function
	if (!(math.abs(i1) = math.abs(i2))) {
                   ^close10:7: error: type mismatch;
 found   : Unit
 required: Int
		 	rep = a
                            ^close10:9: error: type mismatch;
 found   : Unit
 required: Int
		 } else rep = b
                            ^close10:5: error: type mismatch;
 found   : Unit
 required: Int
	if (!(math.abs(i1) = math.abs(i2))) {
        ^